# SmartLib

./: .env  .gitignore  ProgressReport.md  README.md  __init__.py  draft.txt  endpoint_test_results.txt  failed_endpoint_debug_results.txt  openapi.json  problems_borrwohistory.csv  problems_copy_ids.csv  pyproject.toml  requirements.txt  setup.py  test_dialog_context.py  test_endpoints.py  test_failed_endpoints.py  test_location_endpoints.py  test_nlu.py  test_query_generator.py
admin_dashboard/: app.py  config.py  db_utils.py  main.py  requirements.txt
admin_dashboard/components/: __init__.py  charts.py
admin_dashboard/pages/: dashboard.py  library_mgt_platform.py  location_qr_generator.py
admin_dashboard/utils/: api_client.py
app/: database.py  main.py  test.py
app/Trash/: demo_dialog_context.py  demo_intelligent_query.py  demo_llm_integration.py  demo_nlu.py  demo_query_generator.py
app/api/: __init__.py  api_router.py  deps.py  nlu_routes.py
app/config/: llm_config.py
app/core/: config.py
app/crud/: __init__.py  author.py  base.py  book.py  book_copy.py  book_location.py  borrowing.py  category.py  language.py  publisher.py  statistics.py  stats.py  student.py  user.py
app/db/: base.py  database.py  databse.py  session.py
app/models/: __init__.py  author.py  base.py  book.py  book_copy.py  book_location.py  borrowing_record.py  category.py  inventory_check.py  language.py  publisher.py  (+2 more)
matetials/: traning_data.json  意图识别素材.json  意图识别素材_改进版.json
scripts/: add_location_migration.py  db_config.py  db_init.py  db_sync.py
test/: testV1.py
(+36 files in other folders)
